--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@golevelup/nestjs-rabbitmq": "^5.6.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.4.13",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^6.0.1",
+    "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.5",
     "prisma": "^6.0.1",
     "reflect-metadata": "^0.2.0",
